--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  yijun-tang
 
+# Markdown processor
+markdown: GFM
+
 # Build settings
 theme: minima
 plugins:
