--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,6 +23,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 # Theme-specific settings
 
@@ -62,6 +63,7 @@ minima:
   #  - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
   #  - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/yijun-tang-77409a220/" }
+   - { platform: rss,            user_url: "https://yijun-tang.github.io//feed.xml" }
   #  - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #  - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #  - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
