restructure the notes

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Yijun's Blog
+title: Yijun's Notes
 author:
   name: Yijun TANG
   email: yijuntang94@gmail.com
@@ -6,7 +6,7 @@ author:
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Ideas Worth To Be Recorded
+  Just a Knowledge Base!
 
 # Build settings
 
@@ -28,7 +28,7 @@ plugins:
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
-  - about.md
+  # - about.md
 
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
